# cli

./: Cargo.toml  package.json
src/: constants.rs  error.rs  main.rs
src/commands/: daemon.rs  login.rs  mod.rs
