[package]
name = "dust-mail-cli"
version = "0.1.0"
edition = "2021"

rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.2.1", features = ["tokio_support"] }
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"]}
